product card tabs

--- a/product-card.html
+++ b/product-card.html
@@ -145,25 +145,206 @@
             </div>
           
             <!-- Content -->
-            <div class="mt-6 space-y-4 max-w-[1100px] w-full">
+            <div class="mt-[30px] space-y-4 max-w-[1300px] w-full">
               <div class="tab-content" id="tab1">
-                <p class="mb-[20px]">
+                <p class="mb-[20px] max-w-[1100px]">
                     Воблер с седловидной лопаткой специально разработан для троллинга судака, крупного окуня, озерной кумжи и лосося. Благодаря форме носовой лопасти и специальной балансировке, STINKA при проводке время от времени совершает броски в сторону, что провоцирует хищных рыб на поклевку.
                 </p>
-                <p class="mb-[20px]">
+                <p class="mb-[20px] max-w-[1100px]">
                     У модели 130FMDR рекомендуемая скорость проводки от 3 до 6 км/ч. Оптимальная скорость проводки зависит от погодных условий. Рабочее заглубление этой модели составляет от 2,8 до 3,2 метров.
                 </p>
-                <p class="mb-[20px]">Воблер «малошумный», в нем предусмотрена небольшая шумовая камера, работа которой провоцирует стайного хищника на атаку. Приманка продемонстрировала хорошие результаты на различных водоемах России.</p>
-                <a href="#" class="text-[#009FFF] text-sm font-medium">Читать далее</a>
+                <p class="mb-[20px] max-w-[1100px]">Воблер «малошумный», в нем предусмотрена небольшая шумовая камера, работа которой провоцирует стайного хищника на атаку. Приманка продемонстрировала хорошие результаты на различных водоемах России.</p>
+                <a href="#" class="text-[#009FFF] text-sm font-medium border-b-[1px] border-[#009FFF]">Читать далее</a>
               </div>
               <div class="tab-content hidden" id="tab2">
-                <p>Здесь будут характеристики приманки...</p>
+                <div class="grid grid-cols-2 gap-[30px]">
+                  <ul>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Вид ловли:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">для спиннинга</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Бренд:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#009FFF] underline">Mepps</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Штрих Код:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">18299</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Назначение:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">для рыбалки</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Модель:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">Aglia Spinflex</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Вес (гр):</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">20</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Сезон:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">Лето</span>
+                    </li>
+                  </ul>
+                  <ul>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Вид ловли:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">для спиннинга</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Бренд:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#009FFF] underline">Mepps</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Штрих Код:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">18299</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Назначение:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">для рыбалки</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Модель:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">Aglia Spinflex</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Вес (гр):</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">20</span>
+                    </li>
+                    <li class="flex flex-js mb-[8px]">
+                      <span class="text-[#323232]">Сезон:</span>
+                      <span class="grow-[1] border-b-[1px] border-dotted border-[#323232] relative top-[-5px] mx-[5px] opacity-[.5]"></span>
+                      <span class="text-[#707070]">Лето</span>
+                    </li>
+                  </ul>
+                </div>
+                <p class="text-[#707070] text-[14px] mt-[32px]">Информация о технических характеристиках, комплексте поставки,
+                   стране изготовления, внешнем виде и цвете товара носит справочный
+                    характер и основывается на последних джступныхъ к моменту 
+                    публикации сведениях</p>
               </div>
               <div class="tab-content hidden" id="tab3">
-                <p>Информация о бренде, который выпускает эту приманку...</p>
+                <div class="flex">
+                  <img src="img/jaxon.png" alt="" class="mr-[45px] self-start">
+                  <div class="">
+                    <p class="text-[#323232] mb-[15px]">Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
+                       удилище, идеально подходящее для рыболовов, ценящих компактность и
+                        удобство в транспортировке. Благодаря своей телескопической конструкции,
+                         данная модель легко складывается до относительно короткой длины, 
+                         что делает её незаменимой в путешествиях и выездах на рыбалку.</p>
+                    <p class="text-[#323232] mb-[15px]">
+                      Jaxon Tenesa Tele Travel сочетает в себе высокое качество материалов и 
+                      продуманную конструкцию, обеспечивая надежность и долговечность в использовании.
+                       Удилище подходит для различных видов рыбалки, будь то ловля на спиннинг или другие техники.
+                    </p>
+                    <p class="text-[#323232] mb-[15px]">
+                      Основные преимущества данного спиннинга включают:
+                    </p>
+                    <ul class="pl-[20px] list-disc">
+                      <li>Компактность: Легко помещается в рюкзак или багажник автомобиля 
+                        благодаря своей телескопической конструкции.</li>
+                      <li>Универсальность: Подходит для ловли как пресноводной, так и морской рыбы.</li>
+                      <li>Простота использования: Быстро раскладывается и собирается, не требуя специальных навыков.</li>
+                      <li>Качество исполнения: Изготовлено из прочных материалов, устойчивых к воздействию внешней среды.</li>
+                    </ul>
+                    <p class="text-[#323232] mt-[15px]">
+                      Jaxon Tenesa Tele Travel станет отличным выбором для тех, кто ищет надежное 
+                      и удобное решение для рыбалки в любых условиях.
+                    </p>
+                  </div>
+                </div>
               </div>
               <div class="tab-content hidden" id="tab4">
-                <p>Отзывы покупателей о товаре...</p>
+                <div class="p-[24px] mb-[12px] rounded-[24px] border border-[rgba(33,33,33,0.2)]">
+                  <div class="flex flex-jcc">
+                    <span class="text-[16px] font-semibold text-[#323232] mr-[8px]">Александр</span>
+                    <span class="text-[14px] mr-[8px]">7 мая 2024</span>
+                  </div>
+                  <div class="flex flex-jcc my-[10px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <span class="text-[#323232] mt-[3px]">5</span>
+                  </div>
+                  <p class="text-[18px] text-[#323232]">
+                    Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
+                     удилище, идеально подходящее для рыболовов, ценящих компактность и удобство 
+                     в транспортировке. Благодаря своей телескопической конструкции, данная 
+                     модель легко складывается до относительно короткой длины, что делает её
+                      незаменимой в путешествиях и выездах на рыбалку.
+                  </p>
+                </div>
+                <div class="p-[24px] mb-[12px] rounded-[24px] border border-[rgba(33,33,33,0.2)]">
+                  <div class="flex flex-jcc">
+                    <span class="text-[16px] font-semibold text-[#323232] mr-[8px]">Александр</span>
+                    <span class="text-[14px] mr-[8px]">7 мая 2024</span>
+                  </div>
+                  <div class="flex flex-jcc my-[10px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star-grey.svg" alt="" class="mr-[5px]">
+                    <img src="img/star-grey.svg" alt="" class="mr-[5px]">
+                    <span class="text-[#323232] mt-[3px]">3</span>
+                  </div>
+                  <p class="text-[18px] text-[#323232]">
+                    Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
+                     удилище, идеально подходящее для рыболовов, ценящих компактность и удобство 
+                     в транспортировке. Благодаря своей телескопической конструкции, данная 
+                     модель легко складывается до относительно короткой длины, что делает её
+                      незаменимой в путешествиях и выездах на рыбалку.
+                  </p>
+                  <div class="flex mt-[12px]">
+                    <img src="img/rate-img1.png" alt="" class="mr-[12px] rounded-[8px]">
+                    <img src="img/rate-img2.png" alt="" class="mr-[12px] rounded-[8px]">
+                    <img src="img/rate-img3.png" alt="" class="mr-[12px] rounded-[8px]">
+                  </div>
+                </div>
+                <div class="p-[24px] mb-[12px] rounded-[24px] border border-[rgba(33,33,33,0.2)]">
+                  <div class="flex flex-jcc">
+                    <span class="text-[16px] font-semibold text-[#323232] mr-[8px]">Александр</span>
+                    <span class="text-[14px] mr-[8px]">7 мая 2024</span>
+                  </div>
+                  <div class="flex flex-jcc my-[10px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <img src="img/star.svg" alt="" class="mr-[5px]">
+                    <span class="text-[#323232] mt-[3px]">5</span>
+                  </div>
+                  <p class="text-[18px] text-[#323232]">
+                    Спиннинг телескопический Jaxon Tenesa Tele Travel — это универсальное
+                     удилище, идеально подходящее для рыболовов, ценящих компактность и удобство 
+                     в транспортировке. Благодаря своей телескопической конструкции, данная 
+                     модель легко складывается до относительно короткой длины, что делает её
+                      незаменимой в путешествиях и выездах на рыбалку.
+                  </p>
+                  <div class="flex mt-[12px]">
+                    <img src="img/rate-img1.png" alt="" class="mr-[12px] rounded-[8px]">
+                    <img src="img/rate-img2.png" alt="" class="mr-[12px] rounded-[8px]">
+                    <img src="img/rate-img3.png" alt="" class="mr-[12px] rounded-[8px]">
+                  </div>
+                </div>
+                <button class="flex py-[16px] px-[24px] mt-[30px] text-[#212121] 
+                rounded-[8px] border-2 border-[#009FFF] hover:bg-[#009FFF] transition hover:text-[#fff]">Показать еще</button>
               </div>
             </div>
           </div>
