--- a/brands.html
+++ b/brands.html
@@ -163,79 +163,208 @@
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Регистрация и вход</a>
+      <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Покупателям</a>
     </li>
+    <li class="text-[15px] text-[#6E6E6E]">
+        •
+      </li>
+      <li>
+        <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Бренды</a>
+      </li>
   </ul>
 
+  <h2 class="font-medium text-[#212121] text-[32px] mb-[30px]">Бренды</h2>
 
-  <div class=" w-full mt-[100px] mb-[100px]" >
-    <div class="bg-white rounded-lg w-full mx-auto bg max-w-[520px]" style="background-image: url(img/Union.png)">
+  <div class="flex items-center">
+    <span>А</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>B</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>C</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>D</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>E</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>F</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>G</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>H</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>I</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>J</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>K</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>L</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>M</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>N</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>O</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>P</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>Q</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>R</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>S</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>T</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>U</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>V</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>W</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>X</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>Y</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+    <span>Z</span>
+    <span class="w-[6px] h-[6px] rounded-[50%] bg-[#6E6E6E] mx-[6px]"></span>
+  </div>
 
-        <!-- Табы -->
-        <div class="flex space-x-2 pt-[15px]">
-          <button id="tab-login"
-            class="flex-1 text-center font-bold text-[32px] tab-rounded text-[#009FFF]"
-            onclick="switchTab('login')">
-            Вход
-          </button>
-          <button id="tab-register"
-            class="flex-1 text-center font-bold text-[32px] tab-rounded  text-black"
-            onclick="switchTab('register')">
-            Регистрация
-          </button>
-        </div>
-    
-        <!-- Контент -->
-        <div id="login-form" class="p-[30px] w-full  flex flex-col" style="border-color: #D9D9D9;">
-            <span class="text-[14px] text-[#323232] mb-[6px] block">Ваша почта</span>
-          <input type="email" placeholder="Введите почту" class="h-[54px] w-full mb-4 p-2 border rounded"  style="border-color: #D9D9D9;"/>
-          <span class="text-[14px] text-[#323232] mb-[6px] block">Пароль</span>
-          <input type="password" placeholder="Пароль" class="h-[54px] w-full mb-4 p-2 border rounded"  style="border-color: #D9D9D9;"/>
-          <a href="#" class="text-[#009FFF] self-start mb-[20px] border-b border-[#009FFF] leading-none">Забыли пароль</a>
-          <button class="w-full max-w-[210px] font-bold text-white py-4 rounded" style="background-color: #CF301B;">Войти</button>
-        </div>
-    
-        <div id="register-form" class="p-6 w-full hidden " style="border-color: #D9D9D9;">
-            <span class="text-[14px] text-[#323232] mb-[6px] block">Ваша имя</span>
-          <input type="text" placeholder="Введите имя" class="h-[54px] w-full mb-4 p-2 border rounded" 
-          style="border-color: #D9D9D9;"/>
-          <span class="text-[14px] text-[#323232] mb-[6px] block">Ваша почта</span>
-          <input type="email" placeholder="Введите почту" class="h-[54px] w-full mb-4 p-2 border rounded" 
-          style="border-color: #D9D9D9;"/>
-          <span class="text-[14px] text-[#323232] mb-[6px] block">Ваш пароль</span>
-          <input type="password" placeholder="Ваш пароль" class="h-[54px] w-full mb-4 p-2 border rounded" 
-          style="border-color: #D9D9D9;"/>
-          <span class="text-[14px] text-[#323232] mb-[6px] block">Подтвердите пароль</span>
-          <input type="password" placeholder="Подтвердите пароль" class="h-[54px] w-full mb-4 p-2 border rounded"
-           style="border-color: #D9D9D9;"/>
-           <span class="text-[14px] text-[#323232] mb-[6px] block">Введите защитную капчу</span>
-           <div class="grid grid-cols-2 gap-2.5 mb-[20px]">
-                <div class="flex border rounded-[8px] border-[rgba(110,110,110,0.25)] p-[8px]">
-                    <img src="img/kod-img.png" alt="" class="max-w-[100%] max-h-[100%] mr-[10px]">
-                    <img src="img/kod-icon.svg" alt="" class="max-w-[100%] min-w-[24px] max-h-[100%]">
-                </div>
-                <div class="border rounded-[8px] py-[15px] px-[20px]  border-[rgba(110,110,110,0.25)]">
-                    <span class="text-[#6E6E6E] text-[16px]">Код капчи</span>
-                </div>
-           </div>
-           <div class="flex items-center">
-            <button class="w-full text-white py-3 rounded" style="background-color: #CF301B;">Регистрация</button>
-            <div class="check-wrap text-[14px] text-[#6E6E6E]  ml-[16px] leading-none">
-                <input type="checkbox">
-                Принимаю правила обработки персональных данных и пользовательское соглашение
-            </div>
-           </div>
+  <h3 class="font-medium text-[#323232] mt-[30px] text-[24px] mb-[24px]">Популярные бренды</h3>
 
-        </div>
-  
-  
-  
+
+  <div class="grid grid-cols-7 gap-[30px]">
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img4.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img4.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img4.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img2.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+    <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
+        <img src="img/brand-img3.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
+    </div>
+  </div>
+
+  <h3 class="font-medium text-[#323232] mt-[30px] text-[24px] mb-[24px]">Все бренды</h3>
+
+  <div class="block mb-[16px] text-[#6E6E6E] text-[24px]">A</div>
+
+  <div class="flex justify-between">
+    <div class="">
+        <span class="text-[#212121] text-[18px] block">AquaWave</span>
+        <span class="text-[#212121] text-[18px] block">AeroTech</span>
+        <span class="text-[#212121] text-[18px] block">AquaLife</span>
+        <span class="text-[#212121] text-[18px] block">ApexGear</span>
+        <span class="text-[#212121] text-[18px] block">AlpineQuest</span>
+        <span class="text-[#212121] text-[18px] block">AquaFusion</span>
+        <span class="text-[#212121] text-[18px] block">AvidAngler</span>
+        <span class="text-[#212121] text-[18px] block">AquaVista</span>
+        <span class="text-[#212121] text-[18px] block">AquaSport</span>
+        <span class="text-[#212121] text-[18px] block">AquaPro</span>
+    </div>
+    <div class="">
+        <span class="text-[#212121] text-[18px] block">AquaWave</span>
+        <span class="text-[#212121] text-[18px] block">AeroTech</span>
+        <span class="text-[#212121] text-[18px] block">AquaLife</span>
+        <span class="text-[#212121] text-[18px] block">ApexGear</span>
+        <span class="text-[#212121] text-[18px] block">AlpineQuest</span>
+        <span class="text-[#212121] text-[18px] block">AquaFusion</span>
+        <span class="text-[#212121] text-[18px] block">AvidAngler</span>
+        <span class="text-[#212121] text-[18px] block">AquaVista</span>
+        <span class="text-[#212121] text-[18px] block">AquaSport</span>
+        <span class="text-[#212121] text-[18px] block">AquaPro</span>
+    </div>
+    <div class="">
+        <span class="text-[#212121] text-[18px] block">AquaWave</span>
+        <span class="text-[#212121] text-[18px] block">AeroTech</span>
+        <span class="text-[#212121] text-[18px] block">AquaLife</span>
+        <span class="text-[#212121] text-[18px] block">ApexGear</span>
+        <span class="text-[#212121] text-[18px] block">AlpineQuest</span>
+        <span class="text-[#212121] text-[18px] block">AquaFusion</span>
+        <span class="text-[#212121] text-[18px] block">AvidAngler</span>
+        <span class="text-[#212121] text-[18px] block">AquaVista</span>
+        <span class="text-[#212121] text-[18px] block">AquaSport</span>
+        <span class="text-[#212121] text-[18px] block">AquaPro</span>
+    </div>
+    <div class="">
+        <span class="text-[#212121] text-[18px] block">AquaWave</span>
+        <span class="text-[#212121] text-[18px] block">AeroTech</span>
+        <span class="text-[#212121] text-[18px] block">AquaLife</span>
+        <span class="text-[#212121] text-[18px] block">ApexGear</span>
+        <span class="text-[#212121] text-[18px] block">AlpineQuest</span>
+        <span class="text-[#212121] text-[18px] block">AquaFusion</span>
+        <span class="text-[#212121] text-[18px] block">AvidAngler</span>
+        <span class="text-[#212121] text-[18px] block">AquaVista</span>
+        <span class="text-[#212121] text-[18px] block">AquaSport</span>
+        <span class="text-[#212121] text-[18px] block">AquaPro</span>
+    </div>
+    <div class="">
+        <span class="text-[#212121] text-[18px] block">AquaWave</span>
+        <span class="text-[#212121] text-[18px] block">AeroTech</span>
+        <span class="text-[#212121] text-[18px] block">AquaLife</span>
+        <span class="text-[#212121] text-[18px] block">ApexGear</span>
+        <span class="text-[#212121] text-[18px] block">AlpineQuest</span>
+    </div>
+  </div>
+
 </div>
-</div>
-</div>
 
 
-<footer class="bg-[#262626] mt-[250px] w-full">
+<footer class="bg-[#262626] mt-[250px]">
   <div class="container">
     <div class="w-full h-[320px] relative transform translate-y-[-50%]">
       <img src="img/contact-me-bg.png" alt="contact-me-bg" class="w-full h-full object-cover rounded-[16px]">
