--- a/index.html
+++ b/index.html
@@ -2317,123 +2317,123 @@
 </div>
 
 
-<!--<div class="w-full py-[110px] relative z-0" style="background-image: url(img/advantedes-bg.png)">-->
-<!--  <img src="img/dzukik.svg" alt="" class="absolute bottom-[0] left-[0] z-[-1]">-->
-<!--  <div class="container">-->
-<!--    <div class="flex-jsb-s">-->
-<!--      <h2 class="max-w-[520px] leading-[100%] font-lena text-white text-[64px] font-normal">Наши преимущества</h2>-->
-<!--      <div class="grid grid-cols-3 gap-x-[30px] gap-y-[60px] max-w-[1000px] w-full">-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon1.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Клубные цены</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Даем скидки и кэшбек за покупки</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon2.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Грамотные консультации</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Наши консультанты — профессионалы</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon3.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Проверенные бренды</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Только качественный товар</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon4.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Быстрый обмен и возврат</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Обмен или возврат товара надлежащего качества </span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon5.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Удобная доставка по России</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Самовывоз или доставка курьером</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">-->
-<!--            <img src="img/advantedes-icon6.svg" alt="" class="m-auto">-->
-<!--          </span>-->
-<!--          <b class="text-white text-[20px] block">Товар в наличии</b>-->
-<!--          <span class="text-white text-[16px] mt-[6px] block">Продаем со своего склада</span>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="w-full py-[110px] relative z-0" style="background-image: url(img/advantedes-bg.png)">
+  <img src="img/dzukik.svg" alt="" class="absolute bottom-[0] left-[0] z-[-1]">
+  <div class="container">
+    <div class="flex-jsb-s">
+      <h2 class="max-w-[520px] leading-[100%] font-lena text-white text-[64px] font-normal">Наши преимущества</h2>
+      <div class="grid grid-cols-3 gap-x-[30px] gap-y-[60px] max-w-[1000px] w-full">
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon1.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Клубные цены</b>
+          <span class="text-white text-[16px] mt-[6px] block">Даем скидки и кэшбек за покупки</span>
+        </div>
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon2.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Грамотные консультации</b>
+          <span class="text-white text-[16px] mt-[6px] block">Наши консультанты — профессионалы</span>
+        </div>
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon3.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Проверенные бренды</b>
+          <span class="text-white text-[16px] mt-[6px] block">Только качественный товар</span>
+        </div>
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon4.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Быстрый обмен и возврат</b>
+          <span class="text-white text-[16px] mt-[6px] block">Обмен или возврат товара надлежащего качества </span>
+        </div>
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon5.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Удобная доставка по России</b>
+          <span class="text-white text-[16px] mt-[6px] block">Самовывоз или доставка курьером</span>
+        </div>
+        <div>
+          <span class="bg-[#3B4B49] w-[60px] h-[60px] rounded-[16px] flex mb-[20px]">
+            <img src="img/advantedes-icon6.svg" alt="" class="m-auto">
+          </span>
+          <b class="text-white text-[20px] block">Товар в наличии</b>
+          <span class="text-white text-[16px] mt-[6px] block">Продаем со своего склада</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<!--<div>-->
-<!--  <div class="w-full h-[740px] bg-cover bg-no-repeat bg-center"-->
-<!--       style="background-image: url(img/information-bg.jpg)"></div>-->
-<!--  <div class="container py-[70px]">-->
-<!--    <h3 class="mb-[40px] text-[#212121] text-[32px] font-medium">-->
-<!--      Интернет магазин рыболовных товаров Фишемания</h3>-->
-<!--    <div class=" grid grid-cols-2 gap-x-[50px]">-->
-<!--      <div>-->
-<!--        <p class="mb-[30px] text-[#323232] text-[16px]">Все для рыбалки – в интернет-магазине Фишемания.Уважаемые любители рыбной-->
-<!--          ловли! Компания Фишемания предлагает вам широкий ассортимент товаров для-->
-<!--          рыбалки по самым привлекательным ценам. Почти 10 лет – начиная с 2002 года,-->
-<!--          мы работаем для вас, предлагая продукцию только проверенных временем брендов,-->
-<!--          среди которых давно полюбившиеся вам Shimano, Humminbird, Rapala, G.Loomis,-->
-<!--          Plano и многие другие.</p>-->
-<!--        <p class="mb-[30px] text-[#323232] text-[16px]">-->
-<!--          ЗАО «Нормарк», владеющее этими торговыми марками, является нашим официальным-->
-<!--          торговым партнером. Приобрести все для рыбалки вы сможете в двух наших рыболовных-->
-<!--          магазинах в Санкт-Петербурге, а также в нашем рыболовном интернет-магазине,-->
-<!--          работающем 24 часа в сутки.-->
-<!--        </p>-->
-<!--        <p class="mb-[30px] text-[#323232] text-[16px]">-->
-<!--          В пользу покупки товаров для рыбалки в наших рыболовных магазинах говорят следующие факты:-->
-<!--        </p>-->
-<!--        <ul class="list-disc pl-[20px]">-->
-<!--          <li>представленный в магазинах ассортимент позволяет приобрести в одном месте-->
-<!--            все товары для рыбалки, начиная от крючков, наживок и удилищ до полного-->
-<!--            туристического снаряжения;</li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <div>-->
-<!--        <ul class="list-disc pl-[20px]">-->
-<!--          <li>-->
-<!--            высокое качество товара обеспечивается благодаря работе только с проверенными-->
-<!--            временем брендами, хорошо зарекомендовавшими себя на российском рынке-->
-<!--            товаров для рыбной ловли;-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            работа напрямую с официальными представителями компаний-производителей-->
-<!--            позволяет нам устанавливать самые доступные цены на все линейки товаров-->
-<!--            в наших рыболовных магазинах в СПб и интернет-магазине;-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            вы получите квалифицированную консультацию у специалистов наших магазинов или по телефону в-->
-<!--            отношении любого интересующего вас товара;-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            наш рыболовный интернет-магазин позволяет вам делать заказ в любое время суток,-->
-<!--            а оплатить выбранный товар вы можете любым удобным способом (посредством оплаты-->
-<!--            электронными деньгами или через платежные терминалы);-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            мы осуществляем оперативную доставку товара по любому адресу в самое удобное для вас время.-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            Вы можете заказать и оплатить понравившийся товар в рыболовном интернет-магазине в любое удобное для вас время.-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--        <p class="mt-[20px] text-[#323232] text-[16px]">-->
-<!--          Почему мы? Быстро, удобно и выгодно купить товары для рыбалки в СПБ вы сможете в наших магазинах в Санкт-Петербурге.-->
-<!--        </p>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div>
+  <div class="w-full h-[740px] bg-cover bg-no-repeat bg-center"
+       style="background-image: url(img/information-bg.jpg)"></div>
+  <div class="container py-[70px]">
+    <h3 class="mb-[40px] text-[#212121] text-[32px] font-medium">
+      Интернет магазин рыболовных товаров Фишемания</h3>
+    <div class=" grid grid-cols-2 gap-x-[50px]">
+      <div>
+        <p class="mb-[30px] text-[#323232] text-[16px]">Все для рыбалки – в интернет-магазине Фишемания.Уважаемые любители рыбной
+          ловли! Компания Фишемания предлагает вам широкий ассортимент товаров для
+          рыбалки по самым привлекательным ценам. Почти 10 лет – начиная с 2002 года,
+          мы работаем для вас, предлагая продукцию только проверенных временем брендов,
+          среди которых давно полюбившиеся вам Shimano, Humminbird, Rapala, G.Loomis,
+          Plano и многие другие.</p>
+        <p class="mb-[30px] text-[#323232] text-[16px]">
+          ЗАО «Нормарк», владеющее этими торговыми марками, является нашим официальным
+          торговым партнером. Приобрести все для рыбалки вы сможете в двух наших рыболовных
+          магазинах в Санкт-Петербурге, а также в нашем рыболовном интернет-магазине,
+          работающем 24 часа в сутки.
+        </p>
+        <p class="mb-[30px] text-[#323232] text-[16px]">
+          В пользу покупки товаров для рыбалки в наших рыболовных магазинах говорят следующие факты:
+        </p>
+        <ul class="list-disc pl-[20px]">
+          <li>представленный в магазинах ассортимент позволяет приобрести в одном месте
+            все товары для рыбалки, начиная от крючков, наживок и удилищ до полного
+            туристического снаряжения;</li>
+        </ul>
+      </div>
+      <div>
+        <ul class="list-disc pl-[20px]">
+          <li>
+            высокое качество товара обеспечивается благодаря работе только с проверенными
+            временем брендами, хорошо зарекомендовавшими себя на российском рынке
+            товаров для рыбной ловли;
+          </li>
+          <li>
+            работа напрямую с официальными представителями компаний-производителей
+            позволяет нам устанавливать самые доступные цены на все линейки товаров
+            в наших рыболовных магазинах в СПб и интернет-магазине;
+          </li>
+          <li>
+            вы получите квалифицированную консультацию у специалистов наших магазинов или по телефону в
+            отношении любого интересующего вас товара;
+          </li>
+          <li>
+            наш рыболовный интернет-магазин позволяет вам делать заказ в любое время суток,
+            а оплатить выбранный товар вы можете любым удобным способом (посредством оплаты
+            электронными деньгами или через платежные терминалы);
+          </li>
+          <li>
+            мы осуществляем оперативную доставку товара по любому адресу в самое удобное для вас время.
+          </li>
+          <li>
+            Вы можете заказать и оплатить понравившийся товар в рыболовном интернет-магазине в любое удобное для вас время.
+          </li>
+        </ul>
+        <p class="mt-[20px] text-[#323232] text-[16px]">
+          Почему мы? Быстро, удобно и выгодно купить товары для рыбалки в СПБ вы сможете в наших магазинах в Санкт-Петербурге.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <footer class="bg-[#262626] mt-[250px]">
