--- a/index.html
+++ b/index.html
@@ -813,7 +813,6 @@
       </div>
     </div>
 
-
     <div class="swiper swiperHeroProduct">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -1241,7 +1240,6 @@
 
       </div>
     </div>
-
 
   </div>
 
@@ -2190,7 +2188,6 @@
 
   </div>
 
-
   <div class="w-full h-auto mt-[70px] mb-[100px]">
 
     <div class="w-full flex-jsb-c mb-6">
@@ -2251,8 +2248,6 @@
 
 
   </div>
-
-
 
   <div class="w-full h-auto mt-[70px] mb-[100px]">
 
@@ -2320,7 +2315,7 @@
 <div class="w-full py-[110px] relative z-0" style="background-image: url(img/advantedes-bg.png)">
   <img src="img/dzukik.svg" alt="" class="absolute bottom-[0] left-[0] z-[-1]">
   <div class="container">
-    <div class="flex-jsb-s">
+    <div class="flex-jsb-s flex-col min-[1500px]:flex-row">
       <h2 class="max-w-[520px] leading-[100%] font-lena text-white text-[64px] font-normal">Наши преимущества</h2>
       <div class="grid grid-cols-3 gap-x-[30px] gap-y-[60px] max-w-[1000px] w-full">
         <div>
@@ -2376,7 +2371,7 @@
   <div class="container py-[70px]">
     <h3 class="mb-[40px] text-[#212121] text-[32px] font-medium">
       Интернет магазин рыболовных товаров Фишемания</h3>
-    <div class=" grid grid-cols-2 gap-x-[50px]">
+    <div class="grid grid-cols-1 min-[1250px]:grid-cols-2 gap-x-[50px]">
       <div>
         <p class="mb-[30px] text-[#323232] text-[16px]">Все для рыбалки – в интернет-магазине Фишемания.Уважаемые любители рыбной
           ловли! Компания Фишемания предлагает вам широкий ассортимент товаров для
